# request/company.go
@@ -1,6 +1,11 @@
 package request
 
 type CreateCompany struct {
+	Fullname    string `json:"fullname" form:"fullname" validate:"required,lte=80"`
+	Email       string `json:"email" form:"email" validate:"required,lte=200,email,notexists=email"`
+	NoHp        string `json:"noHp" form:"noHp" validate:"required,lte=20,notexists=no_hp"`
+	Username    string `json:"username" form:"username" validate:"required,lte=20,lowercase,notexists=username"`
+	Passwd      string `json:"passwd" form:"passwd" validate:"required,lte=200"`
 	Name        string `json:"name" validate:"required"`
 	Description string `json:"description" validate:""`
 	Balance     int64  `json:"balance" validate:""`
